--- a/institutes.platforms.html
+++ b/institutes.platforms.html
@@ -132,7 +132,7 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-7 col-md-12">
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EXAMINATIONAL <br> MANAGEMENT INFORMATION INSTITUTES</h1>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EDUCATIONAL <br> MANAGEMENT INFORMATION INSTITUTES</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;">
                                        
                                     </P>
