--- a/schools.examinations.html
+++ b/schools.examinations.html
@@ -132,9 +132,9 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-7 col-md-12">
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EXAMINATIONAL <br> MANAGEMENT INFORMATION SCHOOLS</h1>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EDUCATIONAL <br> MANAGEMENT INFORMATION SCHOOLS</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;">
-                                        
+                                       
                                     </P>
                                     <!-- <a href="Request.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Request</a> -->
                                     <!-- <li class="button-header"><a href="Request.html" class="btn btn3">Request</a></li> -->
