--- a/index.html
+++ b/index.html
@@ -3442,11 +3442,11 @@
                                    </div>
                                    <!-- social -->
                                    <div class="footer-social">
-                                       <a href="#"><i class="fab fa-youtube"></i></a>
-                                       <a href="#"><i class="fab fa-facebook"></i></a>
-                                       <a href="https://github.com/softwarepioneers"><i class="fab fa-github"></i></a>
+                                       <a href="https://www.youtube.com/@ibrahimsiciidjamac" target="_blank" ><i class="fab fa-youtube"></i></a>
+                                       <a href="https://www.facebook.com/share/1G1yuFcnfT/?mibextid=qi2Omg" target="_blank" ><i class="fab fa-facebook"></i></a>
+                                       <a href="https://github.com/softwarepioneers" target="_blank" ><i class="fab fa-github"></i></a>
                                        <a href="#"><i class="fab fa-telegram"></i></a>
-                                       <a href="https://chat.whatsapp.com/BifDArdCmG8Khg6dgIFUYq"><i class="fab fa-whatsapp"></i></a>
+                                       <a href="https://chat.whatsapp.com/BifDArdCmG8Khg6dgIFUYq" target="_blank" ><i class="fab fa-whatsapp"></i></a>
                                    </div>
                                </div>
                            </div>
