--- a/index.html
+++ b/index.html
@@ -3445,7 +3445,7 @@
                                        <a href="https://www.youtube.com/@ibrahimsiciidjamac" target="_blank" ><i class="fab fa-youtube"></i></a>
                                        <a href="https://www.facebook.com/share/1G1yuFcnfT/?mibextid=qi2Omg" target="_blank" ><i class="fab fa-facebook"></i></a>
                                        <a href="https://github.com/softwarepioneers" target="_blank" ><i class="fab fa-github"></i></a>
-                                       <a href="#"><i class="fab fa-telegram"></i></a>
+                                       <a href="https://t.me/ibrahimSiciid"><i class="fab fa-telegram"></i></a>
                                        <a href="https://chat.whatsapp.com/BifDArdCmG8Khg6dgIFUYq" target="_blank" ><i class="fab fa-whatsapp"></i></a>
                                    </div>
                                </div>
