--- a/contactus.html
+++ b/contactus.html
@@ -154,7 +154,7 @@
             </div>
         </section>
         <!-- ? services-area -->
-        <div class="services-area">
+        <!-- <div class="services-area">
             <div class="container">
                 <div class="row justify-content-sm-center">
                     <div class="col-lg-4 col-md-6 col-sm-8">
@@ -326,7 +326,7 @@
              <div class="container">
 
              </div>
-        </div>
+        </div> -->
         <!-- Courses area start -->
      
       
