--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                 </div>
                                 <div class="properties__caption">
                                 <p>ACADEMIC SYSTEMS</p>
-                                <h3>SCHOOLS</h3>
+                                <h3>KGSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
@@ -373,7 +373,7 @@
                                 </div>
                                 <div class="properties__caption">
                                     <p>ACADEMIC SYSTEMS</p>
-                                    <h3>INSTITUTES</h3>
+                                    <h3>PRISS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                     </p>
@@ -406,7 +406,7 @@
                                 </div>
                                 <div class="properties__caption">
                                 <p>ACADEMIC SYSTEMS</p>
-                                <h3>UNIVERSITIES</h3>
+                                <h3>PRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
@@ -442,7 +442,7 @@
                                 </div>
                                 <div class="properties__caption">
                                 <p>ACADEMIC SYSTEMS</p>
-                                <h3>SCHOOLS</h3>
+                                <h3>SECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
@@ -474,7 +474,7 @@
                                 </div>
                                 <div class="properties__caption">
                                     <p>ACADEMIC SYSTEMS</p>
-                                    <h3>INSTITUTES</h3>
+                                    <h3>KGPRISS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                     </p>
@@ -507,7 +507,7 @@
                                 </div>
                                 <div class="properties__caption">
                                 <p>ACADEMIC SYSTEMS</p>
-                                <h3>UNIVERSITIES</h3>
+                                <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
