--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC EXAMINATIONS</p>
-                                <h3>SCHOOLS</h3>
+                                <p>ACADEMIC SYSTEMS</p>
+                                <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
@@ -574,8 +574,8 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ACADEMIC EXAMINATIONS</p>
-                                    <h3>INSTITUTES</h3>
+                                    <p>ACADEMIC SYSTEMS</p>
+                                    <h3>KGPRIPRESS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                     </p>
@@ -607,8 +607,8 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC EXAMINATIONS</p>
-                                <h3>UNIVERSITIES</h3>
+                                <p>ACADEMIC SYSTEMS</p>
+                                <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
