--- a/index.html
+++ b/index.html
@@ -3813,8 +3813,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>SCHOOLS</h2>
-                            <h2>PRODUCTS</h2>
+                            <h2>REGISTERED</h2>
+                            <h2>INSTITUTIONS</h2>
                         </div>
                     </div>
                 </div>
