--- a/index.html
+++ b/index.html
@@ -3814,6 +3814,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
+                            <h2>EDUCATIONAL</h2>
                             <h2>INSTITUTIONS</h2>
                         </div>
                     </div>
