--- a/english_exams.html
+++ b/english_exams.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </section>
-        <!-- ? services-area -->
+        <!-- ? services-area
         <div class="services-area">
             <div class="container">
                 <div class="row justify-content-sm-center">
@@ -312,7 +312,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>  -->
         <!-- Courses area start -->
 
        
